[package]
name    = "cloud-meta"
version = "0.2.0"
edition = "2021"

description = "Cloud metadata client"
license     = "GPL-2.0"

[dependencies]
tokio      = "1.15.0"
http       = "0.2.6"
serde_json = "1.0.75"

[dependencies.async-recursion]
version  = "1.0.0"

[dependencies.hyper]
version  = "0.14.16"
features = ["client", "http1", "tcp"]

[dependencies.serde]
version  = "1.0.133"
features = ["derive"]

[dev-dependencies.anyhow]
version  = "1.0.52"
features = ["backtrace"]

[dev-dependencies.tokio]
version  = "1.15.0"
features = ["full"]

[profile.release]
debug = 1
lto   = true
